# SoftGrasp

./: README.md  README_11.md  SoftGrasp_train.py  hand_relocate_v1_mujoco.py  requirements.txt  visualize_policy.py  visualize_real.py
conf/imi/: SoftGrasp_imi_learn.yaml  SoftGrasp_imi_visualize.yaml
data/data_csv/: test.csv
data/test_recordings/exp_apple_21/: exp_apple_21.pickle
picture/: video.html
robot/: real_env.py  robot_utils.py  robot_utils_hand.py
robot/src/: README.md
robot/src/mujoco_hand/: CMakeLists.txt  package.xml
robot/src/mujoco_hand/launch/: mujoco_hand.launch
robot/src/mujoco_hand/src/: hand-v1_demos.pickle  hand_assets_1.xml  hand_relocate_1.xml  mujoco_hand.py
robot/ur_msgs/: CMakeLists.txt  package.xml
robot/ur_msgs/msg/: URPub.msg  URSub.msg
src/: train_utils.py
src/datasets/: SoftGrasp_dataset.py  base.py
src/engines/: engine.py
src/models/: SoftGrasp_models.py  SoftGrasp_models_real.py  encoders.py  vae.py
